# GPChar

./: .gitignore  README.md  data.csv  gpchar.py  graphics.py  main.py  pyproject.toml  setup.py
src/gpchar/: data.csv  gpchar.py  graphics.py
src/gpchar/assets/: styling_for_dims.css
tests/: test1.py  testdata.csv
