[build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

[project]
    name = "gpchar"
    version = "0.0.1"
    authors = [
      { name="David Hambraeus", email="davham@chalmers.se" },
    ]
    description = "Function characterization and visualization using Gaussian Processes"
    readme = "README.md"
    requires-python = ">=3.7"
    classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]

[project.urls]
    "Homepage" = "https://github.com/hamdav/gpchar"